src/objects/c2g__codaPurchaseCreditNote__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppurchasecreditnote</customHelpPage>
    <description>Holds information that applies to the whole payable credit note such as vendor account and payable credit note date.</description>
    <fields>
        <fullName>c2g__AccountAddress__c</fullName>
        <formula>c2g__Account__r.BillingStreet + &apos; &apos; + c2g__Account__r.BillingCity + &apos; &apos; + c2g__Account__r.BillingState + &apos; &apos; + c2g__Account__r.BillingPostalCode + &apos; &apos; + c2g__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCreditNoteNumber__c</fullName>
        <label>Vendor Credit Note Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountECCountryCode__c</fullName>
        <formula>TEXT(c2g__Account__r.c2g__CODAECCountryCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountInvoiceNumber__c</fullName>
        <label>Vendor Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteDescription__c</fullName>
        <label>Credit Note Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Credit Note Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteReason__c</fullName>
        <label>Credit Note Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Damaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective Discount</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteStatus__c</fullName>
        <label>Credit Note Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteTotal__c</fullName>
        <formula>c2g__NetTotal__c  +  c2g__TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesNetTotal__c</fullName>
        <description>Total value of expense items on the credit note, before tax.
SUM: Payable Credit Note Expense Line Item: NetValue</description>
        <label>Expenses Net Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Expense Line Items.</description>
        <label>Expenses Tax 1 Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Expense Line Items.</description>
        <label>Expenses Tax 2 Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteExpLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Unused 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Unused 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reportable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PayableCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsNetTotal__c</fullName>
        <description>Total value of product items on the credit note, before tax.
SUM: Payable Credit Note Line Item: NetValue</description>
        <label>Items Net Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Product Line Items.</description>
        <label>Items Tax 1 Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Product Line Items.</description>
        <label>Items Tax 2 Total</label>
        <summarizedField>c2g__codaPurchaseCreditNoteLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseCreditNoteLineItem__c.c2g__PurchaseCreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NetTotal__c</fullName>
        <formula>c2g__ItemsNetTotal__c  +  c2g__ExpensesNetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__CreditNoteStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference1__c</fullName>
        <label>Reference 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Reference2__c</fullName>
        <label>Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RegisteredDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotesTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxTotal__c</fullName>
        <formula>c2g__ItemsTax1Total__c  +  c2g__ExpensesTax1Total__c + c2g__ItemsTax2Total__c + c2g__ExpensesTax2Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Payable Credit Notes</relationshipLabel>
        <relationshipName>PurchaseCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VATRegistrationNumber__c</fullName>
        <formula>c2g__Account__r.c2g__CODAVATRegistrationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Payable Credit Note</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaPurchaseCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaPurchaseCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaPurchaseCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__AccountCreditNoteNumber__c</columns>
        <columns>c2g__CreditNoteDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__CreditNoteCurrency__c</columns>
        <columns>c2g__CreditNoteTotal__c</columns>
        <columns>c2g__AccountInvoiceNumber__c</columns>
        <columns>c2g__CreditNoteReason__c</columns>
        <columns>c2g__CreditNoteStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCR{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Credit Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>